handle zenodo shit